--- a/latex/sections/discussion.tex
+++ b/latex/sections/discussion.tex
@@ -1,4 +1,6 @@
 \textbf{Future ideas:}
 \begin{itemize}
     \item Auto encoder
+    \item Lunch LFC into orbit around earth to have a base truth
+    \item Better understand the stellar activities
 \end{itemize}
