--- a/latex/sections/results.tex
+++ b/latex/sections/results.tex
@@ -18,3 +18,8 @@ Performing the matrix reduction chi2 fit yields the results plotted in figure
         \label{fig:RV_results_barycentric}
     \end{wide}
 \end{SCfigure}
+
+
+\todo{Add plot with all files}
+\todo{Add plots for the rest of the stars}
+
