--- a/rv_rms.ipynb
+++ b/rv_rms.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "\n",
     "plot_matrix(diff_matrix, plot_ratio=False)\n",
-    "m, final_shifts, final_shifts_err = matrix_reduce_results_rms(diff_matrix, plot=True, input_is_angstrom=False)\n"
+    "m, final_shifts, final_shifts_err = matrix_reduce_results_rms(diff_matrix, plot=True)\n"
    ]
   },
   {
